--- a/src/main/resources/templates/pages/utilisateurs/users.html
+++ b/src/main/resources/templates/pages/utilisateurs/users.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
-<html lang="FR" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}">
+<th:block th:replace="/fragments/header"></th:block>
+
 		<title th:text="#{user.list}"></title>	
 	</head>
 	<body>
+	<th:block th:replace="/fragments/nav"></th:block>
 		<h1 th:text="#{user.list}"></h1>
-		<h1 th:text="#{user.email}"></h1>
+		<h1 th:if="${session.user != null}" th:text="|#{bonjour} ${session.user.pseudo}|"></h1>
+		
 		<div th:each="u : ${users}">
 		<p  th:text="${u.nom}"></p>
-		
-		
 		</div>
+		
+		<th:block th:replace="/fragments/footer"></th:block>
+		
 	</body>
 </html>
