--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,5 +2,7 @@
 <html lang="FR" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8"/>
 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
