--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body class="full">
 	<section class="intro">
-		<a href="/dating/utilisateurs">
+		<a href="/dating/utilisateurs/login">
 		<div class="content">
 			<h1 th:text="#{bienvenue}"></h1>
 		</div>
