--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -36,6 +36,16 @@ img{
 	
 }
 
+.bonjour {
+	font-family:'Great Vibes',serif;
+	font-size: 150%;
+	font-weight:500;
+	color:black;
+	text-align:left;
+	padding:0;
+	text-shadow:0px 0px 250px #000;	
+}
+
 h1 {
 	font-family:'Great Vibes',serif;
 	font-size: 500%;
@@ -55,9 +65,18 @@ p {
 	padding:0;
 	text-shadow:0px 0px 250px #000;	}
 	
-fieldset{
+.footer{
+	font-family:'Great Vibes',serif;
+	font-size: 150%;
+	font-weight:500;
+	color:black;
+	text-align:center;
+	padding:0;
+	text-shadow:0px 0px 250px #000;
+}	
 	
-	height:235px;
+fieldset{
+	min-height:235px;
 }	
 
 .utilisateur {
