--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,7 +1,8 @@
-<h1 class="bonjour" th:if="${session.user != null}" th:text="|#{bonjour} ${session.user.pseudo}|"></h1>
-<ul class="menu">
+<p class="bonjour" th:if="${session.user != null}" th:text="|#{bonjour} ${session.user.pseudo}|"></p>
+<!--  <ul class="menu">
 	<a class="menuli" href="/dating/utilisateurs" th:text="#{user.list}"><li></li></a>
 	<a class="menuli" href="/dating/utilisateurs/register" th:text="#{user.new}"><li></li></a>
 	<a class="menuli" th:if="${session.user}==null" href="/dating/utilisateurs/login" th:text="#{user.login}"><li></li></a>
 	<a class="menuli" th:if="${session.user} != null"  th:text="#{user.logout}" href="/dating/utilisateurs/logout"><li></li></a>
-</ul>
+</ul>-->
+<span><a class="menuli" th:if="${session.user} != null"  th:text="#{user.logout}" href="/dating/utilisateurs/logout"></a></span>
