--- a/src/main/resources/templates/pages/utilisateurs/users.html
+++ b/src/main/resources/templates/pages/utilisateurs/users.html
@@ -7,11 +7,19 @@
 		
 		<h1 th:text="#{user.list}"></h1>
 		
-		
-		<div th:each="u : ${users}">
-		<p  th:text="${u.pseudo}+': '+${u.nom}+' '+${u.prenom}+', '+${u.adresse.numero}+
-		 ${u.adresse.prefixe}+' '+${u.adresse.typeRue}+' '+${u.adresse.nomRue}+', '+${u.adresse.codePostal}+' '+${u.adresse.ville}"></p>
-		</div>
+		<table>
+		<tr th:each="u : ${users}">
+			<td th:each="p : ${u.photos}"><img th:src="'/img/'+${p.lien}"></td>
+			
+			<td  th:text="${u.pseudo}"></td>
+			<!--<td  th:text="${u.nom}"></td>
+			<td  th:text="${u.prenom}"></td>
+			<td  th:text="${u.adresse.numero}+
+			 ${u.adresse.prefixe}+' '+${u.adresse.typeRue}+
+			 ' '+${u.adresse.nomRue}+', '+${u.adresse.codePostal}+
+			 ' '+${u.adresse.ville}"></td>-->
+			 </tr>
+		</table>
 		
 		<th:block th:replace="/fragments/footer"></th:block>
 		
