--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Great+Vibes');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .full {
 	margin:0;
@@ -225,3 +226,38 @@ td img {
 }
 
 tr:hover {opacity:0.6;}
+
+.blue {
+	background:blue;
+}
+
+.profil {
+	background:#fff;
+	margin-left:20%;
+	margin-right:20%;
+	opacity:0.5;
+	border-radius:10px;
+	font-family:'Roboto',serif;}
+	
+.texteprofil {
+	display:inline-block;
+	margin-left:10px;
+	font-family:'Roboto',serif;
+	font-size : 2rem;
+	color: black;
+	width:70%;
+}	
+.portrait img {padding:10px;
+			width:180px;}
+
+.fiche {
+	float:right;
+	font-family:'Roboto',serif;
+	font-size : 1rem;
+	width:100%;
+	border:0px;
+	margin:0;
+	margin-top:2%;
+	margin-bottom:2%;
+	height :auto;
+}
